[package]
name = "win-core-audio"
version = "0.0.0"
edition = "2018"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]

[dependencies]
bitflags = "1.2.1"
skylight = { git = "https://github.com/adumbidiot/skylight-rs", features = [ "objbase" ] }
widestring = "0.4.3"
winapi = { version = "0.3.9", features = [ "mmdeviceapi", "functiondiscoverykeys_devpkey", "audioclient", "coml2api", "endpointvolume", "ksmedia", "impl-debug" ] }